fix: Avoid distorting hero secondary images and add border-radius

--- a/backend/static/scss/_hero.scss
+++ b/backend/static/scss/_hero.scss
@@ -127,8 +127,9 @@
       }
 
       img {
-        width: 100%;
-        height: 100%;
+        border-radius: $border-radius;
+        max-width: 100%;
+        max-height: 100%;
       }
     }
   }
